added more registred data entities, updated styling to neaten up the external docs

--- a/ENV.Web/ENV.Web.csproj
+++ b/ENV.Web/ENV.Web.csproj
@@ -107,5 +107,8 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Swagger\swagger-ui-custom.css" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
