refactored paths and operations into separate classes and moved shared code into the Utils class

--- a/ENV.Web/ENV.Web.csproj
+++ b/ENV.Web/ENV.Web.csproj
@@ -99,7 +99,17 @@
     <Compile Include="PrintToPDFAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StoredStuff.cs" />
+    <Compile Include="Swagger\PathCreators\Operations\Delete.cs" />
+    <Compile Include="Swagger\PathCreators\Operations\Get.cs" />
+    <Compile Include="Swagger\PathCreators\Operations\IOperationCreator.cs" />
+    <Compile Include="Swagger\PathCreators\Operations\List.cs" />
+    <Compile Include="Swagger\PathCreators\Operations\Post.cs" />
+    <Compile Include="Swagger\PathCreators\Operations\Put.cs" />
+    <Compile Include="Swagger\PathCreators\PathsWithIDCreator.cs" />
+    <Compile Include="Swagger\PathCreators\PathsWithoutIDCreator.cs" />
+    <Compile Include="Swagger\SwaggerDocumentCreator.cs" />
     <Compile Include="Swagger\SwaggerProvider.cs" />
+    <Compile Include="Swagger\SwaggerUtils.cs" />
     <Compile Include="ViewModel.cs" />
     <Compile Include="WebHelper.cs" />
   </ItemGroup>
